# rackpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
host/: CMakeLists.txt  README.md
host/include/rack++/host/: channel.h  module.h  module_loader.h  param.h  unit.h
host/src/: channel.cpp  module.cpp  module_loader.cpp  param.cpp  trigger.cpp  unit.cpp
include/rack++/host/: dll.h  module.h  param.h  trigger.h  unit.h
include/rack++/module/: channel.h  param.h  trigger.h
module/: CMakeLists.txt
module/include/rack++/module/: basic_stereo_effect.h  channel.h  channel_listener.h  listenable.h  param.h  param_listener.h  smooth_param.h  smooth_param_listener.h  trigger.h  trigger_listener.h  unit.h
module/src/: basic_stereo_effect.cpp  channel.cpp  param.cpp  smooth_param.cpp  trigger.cpp  unit.cpp
src/host/: channel.cpp  dll.cpp  module.cpp  unit.cpp
src/module/: basic_stereo_effect.cpp  channel.cpp  trigger.cpp
